<resources>
    <string name="app_name">BackendlessGoogleMaps</string>
    <string name="title_activity_maps">Map</string>
    <string name="show_family_location">Show Family Location</string>
    <string name="login_peter">Login Peter</string>
    <string name="login_thabo">Login Thabo</string>
    <string name="login_nelson">Login Nelson</string>
    <string name="login_susan">Login Susan</string>
</resources>