<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnFamily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/buttons"
        android:text="@string/show_family_location"
        android:textColor="@color/black"
        app:backgroundTint="@android:color/transparent"
        app:backgroundTintMode="add" />

    <Button
        android:id="@+id/btnPeter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/buttons"
        android:text="@string/login_peter"
        android:textColor="@color/black"
        app:backgroundTint="@android:color/transparent"
        app:backgroundTintMode="add" />

    <Button
        android:id="@+id/btnThabo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/buttons"
        android:text="@string/login_thabo"
        android:textColor="@color/black"
        app:backgroundTint="@android:color/transparent"
        app:backgroundTintMode="add" />

    <Button
        android:id="@+id/btnNelson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/buttons"
        android:text="@string/login_nelson"
        android:textColor="@color/black"
        app:backgroundTint="@android:color/transparent"
        app:backgroundTintMode="add" />

    <Button
        android:id="@+id/btnSusan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/buttons"
        android:text="@string/login_susan"
        android:textColor="@color/black"
        app:backgroundTint="@android:color/transparent"
        app:backgroundTintMode="add" />
</LinearLayout>